Fix campaign settings text alignment

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2740,7 +2740,7 @@ p {
 
 .campaign-overview-lower-right {
   display: flex;
-  gap: 32px;
+  gap: 42px;
 }
 
 .last-edited-area {
@@ -2764,7 +2764,6 @@ p {
   height: 100%;
   padding-bottom: 10px;
   scroll-margin-top: 40vh;
-
 }
 
 .settings-title {
@@ -2774,7 +2773,6 @@ p {
 .campaign-settings-text {
   display: flex;
   justify-content: center;
-  align-items: center;
   border: 1px solid var(--elem_border);
   border-radius: 3px;
   color: var(--text_flavour);
@@ -2783,6 +2781,7 @@ p {
   margin: 0;
   padding: 0px 5px;
   text-align: center;
+  min-height: 22px;
 }
 
 @media screen and (max-width: 850px) { 
@@ -2805,7 +2804,6 @@ p {
 
   .campaign-overview-lower-right {
     justify-content: flex-start;
-    gap: 0px;
   }
 
   .campaign-settings-area {
